[package]
name = "shuttle-ramp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros", "http2"] }
dashmap = "5.5.3"
nanoid = "0.4.0"
serde = { version = "1.0.192", features = ["derive"] }
shuttle-axum = "0.32.0"
shuttle-runtime = "0.32.0"
tokio = "1.28.2"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
